--- a/root/package.json
+++ b/root/package.json
@@ -22,6 +22,7 @@
     "react": "~15.4.0",
     "react-native": "^0.42.3",
     "react-native-google-cast": "^1.2.0",
+    "react-native-keyboard-aware-view": "0.0.12",
     "react-native-svg": "^5.1.6"
   }
 }
